--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -18,8 +18,12 @@
 <div class="row">
   <h3 class="col-md-7"><a href="{% url 'author-detail' author.pk %}">{{ author }}</a></h3>
   <div class="col-sm-5">
+    {% if perms.catalog.change_author %}
     <a class="btn btn-primary" href="{% url 'author_update' author.pk %}">Update</a>
+    {% endif %}
+    {% if perms.catalog.delete_author %}
     <a class="btn btn-danger" href="{% url 'author_delete' author.pk %}">Delete</a>
+    {% endif %}
   </div>
 </div>
 
