--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -1,5 +1,9 @@
 body {
-  background-color: rgb(255, 250, 250);
+  background-color: #ddd;
+}
+
+.my-credit {
+  padding-top: 20px;
 }
 
 .sidebar-nav {
