--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #ddd;
+  background-color: #eee;
 }
 
 .my-credit {
-  padding-top: 20px;
+  padding-top: 50px;
 }
 
 .sidebar-nav {
