--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -74,7 +74,7 @@
 
       </div>
       <div class="text-center my-credit">
-        Written with Django &copy; Nguyen Thanh Hung, 2020
+        Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
       </div>
     </div>
 
