--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -6,7 +6,7 @@ Home Page
 
 {% block content %}
 <h1>Library Home Page</h1>
-<p>Welcome to Local-Library, a website developed by <em>Mozilla Developer Network</em>!</p>
+<p>Welcome to Local-Library, a website developed following tutorials on <em>Mozilla Developer Network</em>!</p>
 <p>You have visited this page {{ num_visits }} time{% if num_visits > 1 %}s{% else %}{% endif %}!</p>
 <h2>Dynamic Content</h2>
 <p>The library has the following records:</p>
