--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -22,9 +22,10 @@
           <p>Xin chao <span class="font-weight-bold">{{ user.get_username }}</span></p>
 
           {% if user.is_authenticated %}
-          <p><a href="{% url 'logout' %}?next={{request.path}}">Logout</a></p>
+          <a class="btn btn-block btn-info" href="{% url 'logout' %}?next={{request.path}}">Logout</a>
           {% else %}
-          <a href="{% url 'login' %}?next={{request.path}}">Login</a>
+          <a class="btn btn-block btn-info" href="{% url 'login' %}?next={{request.path}}">Login</a>
+          <a class="btn btn-block btn-info" href="{% url 'register' %}">Register</a>
           {% endif %}
 
           {% if perms.catalog.can_mark_returned %}
