--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,12 +1,15 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <h1>Create an account</h1>
 
 <form action="" method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Sign-up">
+
+  {{ form | crispy }}
+
+  <input class="btn btn-block btn-primary" type="submit" value="Sign-up">
 
 </form>
 
