--- a/catalog/templates/catalog/author_form.html
+++ b/catalog/templates/catalog/author_form.html
@@ -1,12 +1,13 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
 <form action="" method="POST">
   {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
+
+  {{ form | crispy }}
+
   <input type="submit" value="Submit">
 </form>
 
