--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'base_generic.html' %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -18,18 +19,9 @@
 
 <form method="POST" action="{% url 'login' %}">
   {% csrf_token %}
-  <table>
-    <tr>
-      <td>{{ form.username.label_tag }}</td>
-      <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-      <td>{{ form.password.label_tag }}</td>
-      <td>{{ form.password }}</td>
-    </tr>
-  </table>
+  {{ form | crispy }}
 
-  <input type="submit" value="Login">
+  <input class="btn btn-block btn-primary" type="submit" value="Login">
   <input type="hidden" name="next" value="{{ next }}">
 
 
