--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -5,8 +5,8 @@
 <div class="row">
   <h1 class="col-md-8">{{ author }}</h1>
   <div class="col-md-4">
-    <a class="btn btn-primary" href="{% url 'author_update' author.pk %}">Update</a>
-    <a class="btn btn-danger" href="{% url 'author_delete' author.pk %}">Delete</a>
+    <a class="btn " href="{% url 'author_update' author.pk %}">Update</a>
+    <a class="btn " href="{% url 'author_delete' author.pk %}">Delete</a>
   </div>
 </div>
 
