--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -9,8 +9,8 @@ Book Detail
 <div class="row">
   <h1 class="col-md-8">{{ book.title }}</h1>
   <div class="crud">
-    <a href="{% url 'book_update' book.pk %}" class="btn btn-primary">Update</a>
-    <a href="{% url 'book_delete' book.pk %}" class="btn btn-danger">Delete</a>
+    <a href="{% url 'book_update' book.pk %}" class="btn ">Update</a>
+    <a href="{% url 'book_delete' book.pk %}" class="btn ">Delete</a>
   </div>
 </div>
 
