--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -9,7 +9,7 @@
 
   {{ form | crispy }}
 
-  <input class="btn btn-block btn-primary" type="submit" value="Sign-up">
+  <input class="btn btn-block " type="submit" value="Sign-up">
 
 </form>
 
