--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -19,13 +19,14 @@
 
         <div class="col-sm-2">
           {% block sidebar %}
-          <p>Xin chao <span class="font-weight-bold">{{ user.get_username }}</span></p>
 
           {% if user.is_authenticated %}
-          <a class="btn btn-block btn-info" href="{% url 'logout' %}?next={{request.path}}">Logout</a>
+          <p>Xin chao <span class="font-weight-bold">{{ user.get_username }}</span></p>
+
+          <a class="btn btn-block " href="{% url 'logout' %}?next={{request.path}}">Logout</a>
           {% else %}
-          <a class="btn btn-block btn-info" href="{% url 'login' %}?next={{request.path}}">Login</a>
-          <a class="btn btn-block btn-info" href="{% url 'register' %}">Register</a>
+          <a class="btn btn-block " href="{% url 'login' %}?next={{request.path}}">Login</a>
+          <a class="btn btn-block " href="{% url 'register' %}">Register</a>
           {% endif %}
 
           {% if perms.catalog.can_mark_returned %}
