--- a/catalog/templates/catalog/all_borrowed_books.html
+++ b/catalog/templates/catalog/all_borrowed_books.html
@@ -7,18 +7,25 @@
 <p>Only available to Librarians</p>
 
 {% if object_list %}
-<ul>
+<table class="table table-borderless">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Book</th>
+      <th scope="col">Borrower</th>
+      <th scope="col">Due date</th>
+      <th scope="col">UId</th>
+    </tr>
+  </thead>
   {% for bookinst in bookinstance_list %}
-  <li class="{% if bookinst.is_overdue %}text-danger{% endif %} row">
-    <a class="col-md-4" href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a>
-    <span class="borrower col-md-2">borrower: {{ bookinst.borrower }}</span>
-    <span class="col-md-2">({{ bookinst.due_back }})</span>
-    <span class="col-md-4">
-      <a href="{% url 'renew-book-librarian' bookinst.id %}">{{ bookinst.id }} </a>
-    </span>
-  </li>
+
+  <tr>
+    <td><a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a></td>
+    <td>{{ bookinst.borrower }}</td>
+    <td class="{% if bookinst.is_overdue %}text-danger{% endif %}">{{ bookinst.due_back }}</td>
+    <td><a href="{% url 'renew-book-librarian' bookinst.id %}">{{ bookinst.id }} </a></td>
+  </tr>
   {% endfor %}
-</ul>
+</table>
 
 {% else %}
 
