--- a/catalog/templates/catalog/book_confirm_delete.html
+++ b/catalog/templates/catalog/book_confirm_delete.html
@@ -6,7 +6,7 @@
 <p>Are you sure you want to delete '{{ book.title }}'?</p>
 <form action="" method="post">
   {% csrf_token %}
-  <input class="btn btn-danger" type="submit" value="Yes, delete">
+  <input class="btn " type="submit" value="Yes, delete">
 </form>
 
 {% endblock content %}
