--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -21,7 +21,7 @@
   {% csrf_token %}
   {{ form | crispy }}
 
-  <input class="btn btn-block btn-primary" type="submit" value="Login">
+  <input class="btn btn-block " type="submit" value="Login">
   <input type="hidden" name="next" value="{{ next }}">
 
 
