Them Pagination & Librarian Permissions

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -24,8 +24,13 @@ a {
   color: var(--dark-green);
 }
 
+.page-link {
+  background-color: var(--dark-green);
+  color: #eee;
+}
+
 .my-credit {
-  padding-top: 50px;
+  padding-bottom: 16px;
 }
 
 .sidebar-nav {
