--- a/catalog/templates/catalog/all_borrowed_books.html
+++ b/catalog/templates/catalog/all_borrowed_books.html
@@ -13,7 +13,7 @@
       <th scope="col">Book</th>
       <th scope="col">Borrower</th>
       <th scope="col">Due date</th>
-      <th scope="col">UId</th>
+      <th scope="col">Unique Id</th>
     </tr>
   </thead>
   {% for bookinst in bookinstance_list %}
