--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -10,7 +10,7 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">Book</th>
-      <th scope="col">UId</th>
+      <th scope="col">Unique Id</th>
       <th scope="col"></th>
     </tr>
   </thead>
@@ -18,7 +18,11 @@
   <tr>
     <th>{{ instance.book.title }}</th>
     <td>{{ instance.pk }}</td>
-    <td><a class="btn" href="{% url 'borrow_a_book' instance.pk %}">Borrow</a></td>
+    <td>
+      {% if user.is_authenticated %}
+      <a class="btn" href="{% url 'borrow_a_book' instance.pk %}">Borrow</a>
+      {% endif %}
+    </td>
   </tr>
   {% endfor %}
 </table>
