--- a/catalog/templates/catalog/author_form.html
+++ b/catalog/templates/catalog/author_form.html
@@ -8,7 +8,7 @@
 
   {{ form | crispy }}
 
-  <input type="submit" value="Submit">
+  <input class="btn btn-block" type="submit" value="Submit">
 </form>
 
 {% endblock content %}
