--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -9,12 +9,16 @@ Book Detail
 <div class="row">
   <h1 class="col-md-8">{{ book.title }}</h1>
   <div class="crud">
+    {% if perms.catalog.change_book %}
     <a href="{% url 'book_update' book.pk %}" class="btn ">Update</a>
+    {% endif %}
+    {% if perms.catalog.delete_book %}
     <a href="{% url 'book_delete' book.pk %}" class="btn ">Delete</a>
+    {% endif %}
   </div>
 </div>
 
-<p>Author: <a href="{% url 'author-detail' book.author.pk %}">{{ book.author }}</a></p>
+<p>Author: <a href="{% url 'author-detail' book.author.pk %}"><strong>{{ book.author }}</strong></a></p>
 <p>Summary: {{ book.summary }}</p>
 <p>ISBN: {{ book.isbn }}</p>
 <p>Genre: {{ book.genre.all | join:", " }}</p>
@@ -25,7 +29,7 @@ Book Detail
   {% for copy in book.bookinstance_set.all %}
   <p>Imprint: {{ copy.imprint }}</p>
   <p
-    class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">
+    class="btn btn-sm {% if copy.status == 'a' %}bg-success{% elif copy.status == 'm' %}bg-danger{% else %}bg-warning{% endif %}">
     {{ copy.get_status_display }}</p>
   {% if copy.status != 'a' %}
   <p>Available on: {{ copy.due_back }}</p>
