--- a/catalog/templates/catalog/book_renew_librarian.html
+++ b/catalog/templates/catalog/book_renew_librarian.html
@@ -11,7 +11,7 @@
     <table>
       {{ form.as_table }}
     </table>
-    <input type="submit" value="OK">
+    <input type="submit" value="Renew">
   </form>
 
   {% endblock content %}
