--- a/catalog/templates/catalog/books_loaned_by_user.html
+++ b/catalog/templates/catalog/books_loaned_by_user.html
@@ -26,7 +26,9 @@
 </table>
 
 {% else %}
-<p>There are no books borrowed.</p>
+
+<p>You are currently borrowing no books.</p>
+
 {% endif %}
 
 {% endblock content %}
