--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -14,6 +14,7 @@ body {
 .container {
   background-color: var(--my-yellow);
   min-height: 100vh;
+  position: relative;
 }
 
 .btn {
@@ -30,7 +31,12 @@ a {
 }
 
 .my-credit {
-  padding-bottom: 16px;
+  position: absolute;
+  bottom: 10px;
+  left: 0px;
+  right: 0px;
+  width: 600px;
+  margin: 10px auto;
 }
 
 .sidebar-nav {
