--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -79,11 +79,11 @@
             </ul>
           </nav>
           {% endif %}
-
         </div>
 
       </div>
-      <div class="fixed-bottom text-center my-credit">
+
+      <div class="text-center my-credit">
         Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
       </div>
     </div>
