--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -83,10 +83,13 @@
 
       </div>
 
-      <div class="text-center my-credit">
-        Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
-      </div>
+
     </div>
+    <footer class="text-center my-credit">
+
+      Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
+
+    </footer>
 
   </body>
 
