--- a/catalog/templates/catalog/all_borrowed_books.html
+++ b/catalog/templates/catalog/all_borrowed_books.html
@@ -13,7 +13,7 @@
       <th scope="col">Book</th>
       <th scope="col">Borrower</th>
       <th scope="col">Due date</th>
-      <th scope="col">Unique Id</th>
+      <th scope="col">Action</th>
     </tr>
   </thead>
   {% for bookinst in bookinstance_list %}
@@ -22,7 +22,7 @@
     <td><a href="{% url 'book-detail' bookinst.book.pk %}">{{ bookinst.book.title }}</a></td>
     <td>{{ bookinst.borrower }}</td>
     <td class="{% if bookinst.is_overdue %}text-danger{% endif %}">{{ bookinst.due_back }}</td>
-    <td><a href="{% url 'renew-book-librarian' bookinst.id %}">{{ bookinst.id }} </a></td>
+    <td><a class="btn" href="{% url 'renew-book-librarian' bookinst.id %}">Renew</a></td>
   </tr>
   {% endfor %}
 </table>
