--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -29,7 +29,7 @@ Book Detail
   {% for copy in book.bookinstance_set.all %}
   <p>Imprint: {{ copy.imprint }}</p>
   <p
-    class="btn btn-sm {% if copy.status == 'a' %}bg-success{% elif copy.status == 'm' %}bg-danger{% else %}bg-warning{% endif %}">
+    class="btn btn-sm {% if copy.status == 'a' %}btn-success{% elif copy.status == 'm' %}btn-danger{% else %}btn-warning{% endif %}">
     {{ copy.get_status_display }}</p>
   {% if copy.status != 'a' %}
   <p>Available on: {{ copy.due_back }}</p>
