--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -14,72 +14,90 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="row">
 
-        <div class="col-md-2">
-          {% block sidebar %}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/">Hung's Library</a>
 
-          {% if user.is_authenticated %}
-          <p>Xin chao <span class="font-weight-bold">{{ user.get_username }}</span></p>
+      <ul class="nav">
+        {% if user.is_authenticated %}
 
-          <a class="btn btn-block " href="{% url 'logout' %}?next={{request.path}}">Logout</a>
-          {% else %}
-          <a class="btn btn-block " href="{% url 'login' %}?next={{request.path}}">Login</a>
-          <a class="btn btn-block " href="{% url 'register' %}">Register</a>
-          {% endif %}
+        <li class="nav-item dropdown">
+          <a href="#" class="nav-link text-white dropdown-toggle" id="userDropdown" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Xin chao <strong>{{ user.get_username }}</strong>
+          </a>
 
-          <hr />
-          <p>For Staff Only</p>
-          <a href="{% url 'all-borrowed' %}">All borrowed books</a>
+          <div class="dropdown-menu" aria-labelledby="userDropdown">
+            <a class="dropdown-item" href="{% url 'my-borrowed' %}">My books</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}?next={{request.path}}">Logout</a>
+          </div>
+        </li>
 
-          <hr />
+        {% else %}
 
-          <ul class="sidebar-nav row">
-            <li class="col-3 col-md-6"><a href="{% url 'index' %}">Home</a></li>
-            <li class="col-3 col-md-6"><a href="{% url 'books' %}">All books</a></li>
-            <li class="col-3 col-md-6"><a href="{% url 'avail_books' %}">On Shelf</a></li>
-            <li class="col-3 col-md-6"><a href="{% url 'authors' %}">All authors</a></li>
-            {% if user.is_authenticated %}
-            <li class="col-3 col-md-6"><a href="{% url 'my-borrowed' %}">My books</a></li>
-            {% endif %}
+        <li class="nav-item"><a class="nav-link text-white" href="{% url 'login' %}?next={{request.path}}">Login</a>
+        </li>
+        <li class="nav-item"> <a class="nav-link text-white" href="{% url 'register' %}">Register</a></li>
 
-          </ul>
+        {% endif %}
+      </ul>
 
-          {% endblock sidebar %}
-        </div>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#libNav" aria-controls="libNav"
+        aria-expanded="false" aria-label="Toggle Navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="col-md-10">
-          {% block content %}
-          {% endblock content %}
-          <!-- ---------- PAGINATION --------------->
-          {% if is_paginated %}
-          <nav aria-label="Pages">
-            <ul class="pagination justify-content-center">
-              {% if page_obj.has_previous %}
-              <li class="page-item">
-                <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">Previous</a>
-              </li>
-              {% endif %}
-              <li class="page-item">
-                <span class="sr-only">(Current)</span>
-                <a href="" class="page-link">{{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</a>
-              </li>
-              {% if page_obj.has_next %}
-              <li class="page-item">
-                <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}">Next</a>
-              </li>
+      <div class="collapse navbar-collapse" id="libNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
 
-              {% endif %}
-            </ul>
-          </nav>
-          {% endif %}
-        </div>
+          <li class="nav-item"><a class="nav-link" href="{% url 'books' %}">All books</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'authors' %}">All authors</a></li>
+          <li class="nav-item"><a class="nav-link" href="{% url 'avail_books' %}">On Shelf</a></li>
 
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" id="" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Staff Only</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{% url 'all-borrowed' %}">All borrowed books</a>
+            </div>
+          </li>
+
+        </ul>
       </div>
 
+    </nav>
+
+    <div class="container py-2">
+
+      {% block content %}
+      {% endblock content %}
+      <!-- ---------- PAGINATION --------------->
+      {% if is_paginated %}
+      <nav aria-label="Pages">
+        <ul class="pagination justify-content-center">
+          {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="{{ request.path }}?page={{ page_obj.previous_page_number }}">Previous</a>
+          </li>
+          {% endif %}
+          <li class="page-item">
+            <span class="sr-only">(Current)</span>
+            <a href="" class="page-link">{{ page_obj.number }} / {{ page_obj.paginator.num_pages }}</a>
+          </li>
+          {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="{{ request.path }}?page={{ page_obj.next_page_number }}">Next</a>
+          </li>
+
+          {% endif %}
+        </ul>
+      </nav>
+      {% endif %}
 
     </div>
+
     <footer class="text-center my-credit">
       Written with Django &copy; <strong>Nguyen Thanh Hung</strong>, 2020
     </footer>
