--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -15,23 +15,28 @@
 </div>
 
 <hr>
-
+{% if author.date_of_birth %}
 <p>Born: {{ author.date_of_birth }}</p>
+{% endif %}
 
 {% if author.date_of_death %}
 <p>Died: {{ author.date_of_death }}</p>
 {% endif %}
 
+<h4>Books</h4>
+
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Books</th>
+      <th scope="col">#</th>
+      <th scope="col">Book Title</th>
     </tr>
   </thead>
 
   {% for book in author.book_set.all %}
   <tr>
-    <th scope="row"><a href="{% url 'book-detail' book.pk %}">{{ book }}</a></td>
+    <th scope="row">{{ forloop.counter }}</th>
+    <td><a href="{% url 'book-detail' book.pk %}">{{ book }}</a></td>
   </tr>
   {% endfor %}
 
