--- a/catalog/templates/catalog/author_list.html
+++ b/catalog/templates/catalog/author_list.html
@@ -3,17 +3,49 @@
 {% block content %}
 <div>
   <h1>{% block title %}
-    All Authors ({{ num_of_authors }})
-    {% endblock title %} </h1>
+    All Authors {% endblock title %}({{ num_of_authors }})
+  </h1>
 
-  {% if perms.catalog.can_crud_author %}
-  <a class="btn " href=" {% url 'author_create' %}">Create Author</a>
+  {% if perms.catalog.add_author %}
+  <a class="btn" href="{% url 'author_create' %}">Create Author</a>
   {% endif %}
 
 </div>
 
 <hr>
-{% for author in author_list %}
+<table class="table table-borderless">
+
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Born</th>
+      <th scope="col">Died</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+
+  {% for author in author_list %}
+  <tr>
+    <th scope="row"><a href="{% url 'author-detail' author.pk %}">{{ author }}</a></th>
+    <td>{{ author.date_of_birth }}</td>
+    <td>{{ author.date_of_death }}</td>
+    <td>
+      {% if perms.catalog.change_author %}
+      <a class="btn" href="{% url 'author_update' author.pk %}">Update</a>
+      {% endif %}
+    </td>
+    <td>
+      {% if perms.catalog.delete_author %}
+      <a class="btn" href="{% url 'author_delete' author.pk %}">Delete</a>
+      {% endif %}
+    </td>
+  </tr>
+  {% endfor %}
+
+</table>
+
+<!-- {% for author in author_list %}
 
 <div class="row">
   <h3 class="col-md-7"><a href="{% url 'author-detail' author.pk %}">{{ author }}</a></h3>
@@ -32,6 +64,6 @@
 <p>Died: {{ author.date_of_death }}</p>
 <hr>
 
-{% endfor %}
+{% endfor %} -->
 
 {% endblock content %}
