--- a/catalog/templates/catalog/books_loaned_by_user.html
+++ b/catalog/templates/catalog/books_loaned_by_user.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1>Borrowed Books</h1>
+<h1>{% block title %}Your Borrowed Books{% endblock title %}</h1>
 <hr />
 
 {% if object_list %}
@@ -21,7 +21,9 @@
   <tr>
     <th scope="row">{{ forloop.counter }}</th>
     <td><a href="{% url 'book-detail' bookInst.book.pk %}">{{ bookInst.book.title }} </a></th>
-    <td class="{% if bookInst.is_overdue %}text-danger{% endif %}">{{ bookInst.due_back }}</td>
+    <td class="{% if bookInst.is_overdue %}text-danger{% endif %}">
+      {{ bookInst.due_back }}<span class="text-muted ml-3">({{ bookInst.days_left }} days left)</span>
+    </td>
     <td><a class="btn" href="{% url 'return_a_book' bookInst.pk %}">Return</a></td>
   </tr>
   {% endfor %}
