--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -17,7 +17,7 @@
   {% for instance in bookinstance_list %}
   <tr>
     <th>{{ instance.book.title }}</th>
-    <td>{{ instance.pk }}</td>
+    <td>{{ instance.pk|truncatechars:8 }}</td>
     <td>
       {% if user.is_authenticated %}
       <a class="btn" href="{% url 'borrow_a_book' instance.pk %}">Borrow</a>
