Dung Card cho Display, Them Icons

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -100,6 +100,11 @@
       {% endif %}
       <!------ END MESSAGE SECTION -------->
 
+      <h2>
+        {% block heading %}
+        {% endblock heading %}
+      </h2>
+
       {% block content %}
       {% endblock content %}
 
