--- a/catalog/templates/catalog/books_loaned_by_user.html
+++ b/catalog/templates/catalog/books_loaned_by_user.html
@@ -24,7 +24,7 @@
     <td class="{% if bookInst.is_overdue %}text-danger{% endif %}">
       {{ bookInst.due_back }}<span class="text-muted ml-3">({{ bookInst.days_left }} days left)</span>
     </td>
-    <td><a class="btn" href="{% url 'return_a_book' bookInst.pk %}">Return</a></td>
+    <td><a class="btn my-btn" href="{% url 'return_a_book' bookInst.pk %}">Return</a></td>
   </tr>
   {% endfor %}
 
