--- a/catalog/templates/catalog/author_confirm_delete.html
+++ b/catalog/templates/catalog/author_confirm_delete.html
@@ -7,7 +7,7 @@
 <p>Are you sure you want to delete author: {{ author }}</p>
 <form action="" method="post">
   {% csrf_token %}
-  <input class="btn " type="submit" value="Yes, delete">
+  <input class="btn btn-danger" type="submit" value="Yes, delete">
 </form>
 
 {% endblock content %}
