--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -20,7 +20,7 @@
     <td>{{ instance.pk|truncatechars:8 }}</td>
     <td>
       {% if user.is_authenticated %}
-      <a class="btn" href="{% url 'borrow_a_book' instance.pk %}">Borrow</a>
+      <a class="btn my-btn" href="{% url 'borrow_a_book' instance.pk %}">Borrow</a>
       {% endif %}
     </td>
   </tr>
