--- a/catalog/templates/catalog/book_form.html
+++ b/catalog/templates/catalog/book_form.html
@@ -6,7 +6,7 @@
 <form action="" method="post">
   {% csrf_token %}
   {{ form | crispy }}
-  <input class="btn btn-block " type="submit" value="Submit">
+  <input class="btn btn-block my-btn" type="submit" value="Submit">
 </form>
 
 {% endblock content %}
