--- a/catalog/templates/catalog/book_list.html
+++ b/catalog/templates/catalog/book_list.html
@@ -4,37 +4,53 @@
 All books
 {% endblock title %}
 
+
+{% block heading %}
+Book List ({{ books_count }})
+{% endblock heading %}
+
 {% block content %}
 
-<h1>Book List ({{ books_count }})</h1>
 {% if perms.catalog.add_book %}
-<a href="{% url 'book_create' %}" class="btn ">Add a Book</a>
+<a href="{% url 'book_create' %}" class="btn my-btn">Add a Book</a>
 {% endif %}
 
 <hr>
-
-{% for book in book_list %}
 <div class="row">
-  <h2 class="col-md-8"><a href="{% url 'book-detail' book.pk %}">{{ book.title }}</a></h2>
-  <div class="col-md-4">
-    {% if perms.catalog.change_book %}
-    <a href="{% url 'book_update' book.pk %}" class="btn ">Update</a>
-    {% endif %}
-    {% if perms.catalog.delete_book %}
-    <a href="{% url 'book_delete' book.pk %}" class="btn ">Delete</a>
-    {% endif %}
+
+  {% for book in book_list %}
+  <div class="col-md-6">
+    <div class="card mb-3">
+      <div class="card-header text-light bg-dark">
+        <a href="{% url 'book-detail' book.pk %}">
+          <h3 class="text-light">{{ book.title }}</h3>
+        </a>
+        <p class="text-muted">Author: {{ book.author }}</p>
+        <div class="d-flex justify-content-end">
+          {% if perms.catalog.change_book %}
+          <a href="{% url 'book_update' book.pk %}">{% include '../update_button.html' %}</a>
+          {% endif %}
+          {% if perms.catalog.delete_book %}
+          <a href="{% url 'book_delete' book.pk %}">{% include 'delete_button.html' %}</a>
+          {% endif %}
+        </div>
+      </div>
+      <div class="card-body">
+        <p class="card-text">
+        <ul>
+          <li>Summary: {{ book.summary }}</li>
+          <li>ISBN: {{ book.isbn }}</li>
+          <li>Genre: {{ book.display_genre }}</li>
+          <li>Language: {{ book.language }}</li>
+        </ul>
+        </p>
+      </div>
+    </div>
   </div>
 
+
+  {% endfor %}
 </div>
 
-<p>Author: {{ book.author }}</p>
-<ul>
-  <li>Summary: {{ book.summary }}</li>
-  <li>ISBN: {{ book.isbn }}</li>
-  <li>Genre: {{ book.display_genre }}</li>
-  <li>Language: {{ book.language }}</li>
-</ul>
-<hr>
-{% endfor %}
 
 {% endblock content %}
