--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -6,37 +6,63 @@ Book Detail
 
 {% block content %}
 
-<div class="row">
-  <h1 class="col-md-8">{{ book.title }}</h1>
-  <div class="crud">
-    {% if perms.catalog.change_book %}
-    <a href="{% url 'book_update' book.pk %}" ">{% include 'update_button.html' %}</a>
+<div class="jumbotron">
+  <h1 class="display-4">{{ book.title }}</h1>
+  <div class="d-flex justify-content-between">
+    <p class="lead">Author: <a href="{% url 'author-detail' book.author.pk %}"><strong>{{ book.author }}</strong></a>
+    </p>
+    <div class="crud">
+      {% if perms.catalog.change_book %}
+      <a href="{% url 'book_update' book.pk %}" ">{% include 'update_button.html' %}</a>
     {% endif %}
     {% if perms.catalog.delete_book %}
     <a href=" {% url 'book_delete' book.pk %}">{% include 'delete_button.html' %}</a>
-    {% endif %}
+      {% endif %}
+    </div>
   </div>
+  <hr class="my-4">
+
+  <p><strong>ISBN:</strong> {{ book.isbn }}</p>
+  <p><strong>Genre:</strong> {{ book.genre.all | join:", " }}</p>
+  <p><strong>Summary:</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex fugiat totam velit quae.
+    Odit, similique
+    inventore dolor quod autem explicabo quis fuga voluptatem labore laudantium deserunt eum, quos quam! Amet.</p>
 </div>
 
-<p>Author: <a href="{% url 'author-detail' book.author.pk %}"><strong>{{ book.author }}</strong></a></p>
-<p>Summary: {{ book.summary }}</p>
-<p>ISBN: {{ book.isbn }}</p>
-<p>Genre: {{ book.genre.all | join:", " }}</p>
+<!-- <div class="row">
+  <h1 class="col-md-8"></h1>
+  
+</div> -->
 
-<div class="copies">
+
+
+<div>
   <h4>Copies</h4>
   <hr>
-  {% for copy in book.bookinstance_set.all %}
-  <p>Imprint: {{ copy.imprint }}</p>
-  <p
-    class="btn btn-sm {% if copy.status == 'a' %}bg-success{% elif copy.status == 'm' %}bg-danger{% else %}bg-warning{% endif %}">
-    {{ copy.get_status_display }}</p>
-  {% if copy.status != 'a' %}
-  <p>Available on: {{ copy.due_back }}</p>
-  {% endif %}
-  <p class="text-muted">Id: {{ copy.id }}</p>
-  <hr>
-  {% endfor %}
+  <div class="row">
+    {% for copy in book.bookinstance_set.all %}
+
+    <div class="col-md-6 mb-2">
+      <div class="card bg-light">
+        <div class="card-body">
+          <p><strong>Imprint:</strong> {{ copy.imprint }}</p>
+          <p
+            class="btn btn-sm {% if copy.status == 'a' %}bg-success{% elif copy.status == 'm' %}bg-danger{% else %}bg-warning{% endif %}">
+            {{ copy.get_status_display }}</p>
+
+          {% if copy.status != 'a' %}
+          <p><strong>Available on:</strong> {{ copy.due_back }}</p>
+          {% endif %}
+
+          <p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
+
+
 </div>
 
 {% endblock content %}
