my-list, d-flex

--- a/catalog/templates/catalog/available_books.html
+++ b/catalog/templates/catalog/available_books.html
@@ -9,45 +9,49 @@
 <!--- REGROUP -->
 {% regroup object_list by book as book_list %}
 
-<div class="accordion" id="availableBooks">
+<div class="my-list">
+  <div class="accordion" id="availableBooks">
 
-  {% for book, copies in book_list %}
+    {% for book, copies in book_list %}
 
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h2 class="mb-0">
-        <button class="btn btn-block text-left font-weight-bold" type="button" data-toggle="collapse"
-          data-target="#book-{{book.id}}" aria-expanded="true" aria-controls="book-{{book.id}}">
-          {{ book }}
-        </button>
-      </h2>
-    </div>
+    <div class="card ">
+      <div class="card-header bg-dark" id="headingOne">
+        <h2 class="mb-0">
+          <button class="btn btn-block text-left font-weight-bold text-light" type="button" data-toggle="collapse"
+            data-target="#book-{{book.id}}" aria-expanded="true" aria-controls="book-{{book.id}}">
+            {{ book }}
+          </button>
+        </h2>
+      </div>
 
-    <div id="book-{{book.id}}" class="collapse {% if forloop.first %}show{% endif %}" aria-labelledby="headingOne"
-      data-parent="#availableBooks">
-      <div class="card-body">
+      <div id="book-{{book.id}}" class="collapse {% if forloop.first %}show{% endif %}" aria-labelledby="headingOne"
+        data-parent="#availableBooks">
+        <div class="card-body">
 
-        <ul class="list-group list-group-flush">
-          {% for copy_ in copies %}
-          <li class="list-group-item">
-            <a href="{% url 'borrow_a_book' copy_.pk %}">
-              <strong>Id:</strong> {{ copy_.pk|truncatechars:23 }}
-              {% if user.is_authenticated %}
-              <span class="btn my-btn ml-2">Borrow</span>
-              {% endif %}
+          <ul class="list-group list-group-flush">
+            {% for copy_ in copies %}
+            <li class="list-group-item d-flex justify-content-between">
+              <span><strong>Id:</strong> {{ copy_.pk|truncatechars:23 }}</span>
 
-            </a>
-          </li>
-          {% endfor %}
-        </ul>
+              <a href="{% url 'borrow_a_book' copy_.pk %}">
+                {% if user.is_authenticated %}
+                <span class="btn my-btn ml-2">Borrow</span>
+                {% endif %}
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
 
+        </div>
       </div>
     </div>
+
+    {% endfor %}
+
   </div>
-
-  {% endfor %}
-
 </div>
+
+
 
 
 
