--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -56,6 +56,11 @@ a {
   opacity: 0.8;
 }
 
+.my-list {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
 footer {
   background-color: var(--light-orange);
   padding: 16px;
