--- a/catalog/templates/catalog/book_detail.html
+++ b/catalog/templates/catalog/book_detail.html
@@ -24,9 +24,7 @@ Book Detail
 
   <p><strong>ISBN:</strong> {{ book.isbn }}</p>
   <p><strong>Genre:</strong> {{ book.genre.all | join:", " }}</p>
-  <p><strong>Summary:</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex fugiat totam velit quae.
-    Odit, similique
-    inventore dolor quod autem explicabo quis fuga voluptatem labore laudantium deserunt eum, quos quam! Amet.</p>
+  <p><strong>Summary:</strong>{{ book.summary }}</p>
 </div>
 
 <!-- <div class="row">
